# data-engineering-zoomcamp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  main.tf  notebook.ipynb  pyproject.toml  variables.tf
01_workshop/: Homework  data talks club  - data extraction and ingestion.ipynb  dlt_dlt_pipeline.duckdb  dlt_pipeline.py
database/: Dockerfile  data_tables.sh
database/sql/: 1-schema.sql  2-ddl.sql
dbt/taxi_rides_nyc/: README.md  dbt_project.yml
dbt/taxi_rides_nyc/models/staging/: schema.yml  (+2 more)
dw_homework_bq/: excersises.sql
extra_load_gcp_storage/: web_to_gcs.py
ingestion/: Dockerfile  main.py
mage_data/magic-zoomcamp/: mage-ai.db
mage_data/magic-zoomcamp/.operation_history/: 2024-01-26  2024-01-29
magic-zoomcamp/: io_config.yaml  metadata.yaml
magic-zoomcamp/data_exporters/: export_taxi_to_gcp_parameter.py  homework_data_to_gcs_partition.py  taxi_data_to_postgres.py  taxi_to_gcs_parquet.py  taxi_to_gcs_partition_parquet.py  titanic_clean_to_gcs.py
magic-zoomcamp/data_loaders/: load_api_data.py  load_taxi_gcs.py  test_gcs.py  test_postgres.sql
magic-zoomcamp/pipelines/api_to_postgres/: metadata.yaml
magic-zoomcamp/pipelines/example_pipeline/: metadata.yaml
magic-zoomcamp/pipelines/gcs_to_bigquery/: metadata.yaml
magic-zoomcamp/pipelines/green_taxi_etl/: metadata.yaml
magic-zoomcamp/pipelines/load_to_gcp_parametrized/: metadata.yaml
magic-zoomcamp/pipelines/taxi_from_api_to_partition_gcs/: metadata.yaml
magic-zoomcamp/transformers/: homework_green_taxi_trans.py  transform_staged_taxi_data.py  transform_taxi_data.py
(+6 files in other folders)
