[tool.poetry]
name = "data-engineering-zoomcamp"
version = "0.1.0"
description = ""
authors = ["RArielAlonso <rariel.alonso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.4"
sqlalchemy = "^2.0.25"
ipykernel = "^6.29.0"
psycopg2-binary = "^2.9.9"
requests = "^2.31.0"
dlt = "^0.4.4"
duckdb = "^0.9.2"
google-cloud-storage = "^2.14.0"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
